[GUI] added enum generator npm script, cleaned up use of enums in Axis.vue, fixed various setTimeout bugs

--- a/GUI/package.json
+++ b/GUI/package.json
@@ -6,7 +6,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "electron:build": "electron-icon-builder --input=./public/icon.png --output=build --flatten && vue-cli-service electron:build",
+    "enumGenerate": "node scripts/enumGenerate.js",
+    "preelectron:build": "electron-icon-builder --input=./public/icon.png --output=build --flatten && npm run enumGenerate",
+    "electron:build": "vue-cli-service electron:build",
+    "preelectron:serve": "npm run enumGenerate",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
