--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -559,6 +559,7 @@ interfaces:
       temperature:
         type: readonly float32
         unit: °C
+        c_getter: 'get_temp()'
       config:
         c_is_class: False
         attributes:
