[libfibre] make pseudo-parallel func calls work (note: the legacy protocol itself doesn't support parallel function calls so they are serialized by libfibre.)
Merge fix for binary libfibre-wasm.wasm file - chose version for cherry-picked commit

--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -50,6 +50,8 @@ libfibre-all:
 	cp /tmp/libfibre-build/libfibre-macos-x86.dylib ../tools/odrive/pyfibre/fibre/
 	docker run -it -v "`pwd`/fibre-cpp":/build -v /tmp/libfibre-build:/build/build -w /build fibre-compiler configs/windows-amd64.config
 	cp /tmp/libfibre-build/libfibre-windows-amd64.dll ../tools/odrive/pyfibre/fibre/
+	docker run -it -v "`pwd`/fibre-cpp":/build -v /tmp/libfibre-build:/build/build -w /build fibre-compiler configs/wasm.config
+	cp /tmp/libfibre-build/libfibre-wasm.* ../GUI/fibre-js/
 
 clean:
 	-rm -fR .dep $(BUILD_DIR)
