--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -695,6 +695,7 @@ interfaces:
             type: float32
             doc: Ratio to `vel_limit`. Infinity to disable.
           vel_ramp_rate: float32
+            unit: turn/s^2
           torque_ramp_rate:
             type: float32
             unit: Nm / sec
