input_config added

--- a/Firmware/.vscode/settings.json
+++ b/Firmware/.vscode/settings.json
@@ -32,5 +32,6 @@
         "type_traits": "cpp",
         "typeinfo": "cpp",
         "algorithm": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
